# sps30-cli

./: .gitmodules  CMakeLists.txt  Readme.md  conanfile.txt  conaninfo.txt
libs/: CMakeLists.txt  sensirion_uart_port.c  sensirion_uart_port.h  sps_git_version.c.in
src/: sps30_cli.cpp
